objects/CMPL123CME__Configure_EU_MIR_Signature__mdt.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field signifies if the Workflow is Active ( when Checked) or Inactive (when Unchecked).</description>
        <inlineHelpText>Whether this configuration is Active or Inactive.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__End_Status__c</fullName>
        <description>Add the End Step.</description>
        <inlineHelpText>Enter the End Status of the corresponding Workflow Step.</inlineHelpText>
        <label>End Status</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Start_Status__c</fullName>
        <description>Add the Start Step.</description>
        <inlineHelpText>Enter the Start Status of the corresponding Workflow Step.</inlineHelpText>
        <label>Start Status</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Workflow_Action__c</fullName>
        <description>Add the Workflow Action.</description>
        <inlineHelpText>Enter the Workflow Action of the corresponding Workflow Step.</inlineHelpText>
        <label>Workflow Action</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Workflow_Rule_Key_Value__c</fullName>
        <description>Add the Workflow Rule Name and Key Value.</description>
        <inlineHelpText>Enter Workflow Rule Name and Key Value of the Workflow Rule for which you want to configure the Signature in the format "Workflow Rule(Key Value)". Leave the key value blank if its unavailable.</inlineHelpText>
        <label>Workflow Rule(Key Value)</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Configure EU MIR Signature</label>
    <listViews>
        <fullName>CMPL123CME__Config_Signature_Default</fullName>
        <columns>MasterLabel</columns>
        <columns>CMPL123CME__Workflow_Rule_Key_Value__c</columns>
        <columns>CMPL123CME__Workflow_Action__c</columns>
        <columns>CMPL123CME__Start_Status__c</columns>
        <columns>CMPL123CME__End_Status__c</columns>
        <columns>CMPL123CME__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>Config Signature (Default)</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Configure EU MIR Signatures</pluralLabel>
</CustomObject>